--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "router": "^1.3.8",
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6"
   }
