--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "^3.0.3"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "router": "^1.3.8",
