--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "express": "^4.18.2",
     "router": "^1.3.8",
     "sequelize": "^6.33.0",
-    "sqlite3": "5.0.2"
+    "sqlite3": "^5.1.6"
   }
 }
